@@ -17,20 +17,22 @@
  * under the License.
  */
 
-package org.apache.druid.server.coordinator.compact;
+package org.apache.druid.server.compaction;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.base.Preconditions;
 import org.apache.commons.lang.ArrayUtils;
 import org.apache.druid.client.indexing.ClientCompactionTaskGranularitySpec;
 import org.apache.druid.client.indexing.ClientCompactionTaskQueryTuningConfig;
 import org.apache.druid.client.indexing.ClientCompactionTaskTransformSpec;
 import org.apache.druid.common.config.Configs;
 import org.apache.druid.data.input.impl.DimensionsSpec;
+import org.apache.druid.indexer.partitions.DimensionRangePartitionsSpec;
 import org.apache.druid.indexer.partitions.DynamicPartitionsSpec;
+import org.apache.druid.indexer.partitions.HashedPartitionsSpec;
 import org.apache.druid.indexer.partitions.PartitionsSpec;
 import org.apache.druid.java.util.common.StringUtils;
 import org.apache.druid.java.util.common.granularity.Granularity;
+import org.apache.druid.java.util.common.granularity.GranularityType;
 import org.apache.druid.query.aggregation.AggregatorFactory;
 import org.apache.druid.segment.IndexSpec;
 import org.apache.druid.server.coordinator.DataSourceCompactionConfig;
@@ -44,11 +46,16 @@ import java.util.List;
 import java.util.function.Function;
 
 /**
- * Represents the status of compaction for a given list of candidate segments.
+ * Represents the status of compaction for a given {@link CompactionCandidate}.
  */
 public class CompactionStatus
 {
-  private static final CompactionStatus COMPLETE = new CompactionStatus(true, null);
+  private static final CompactionStatus COMPLETE = new CompactionStatus(State.COMPLETE, null);
+
+  public enum State
+  {
+    COMPLETE, PENDING, RUNNING, SKIPPED
+  }
 
   /**
    * List of checks performed to determine if compaction is already complete.
@@ -68,45 +75,124 @@ public class CompactionStatus
       Evaluator::transformSpecFilterIsUpToDate
   );
 
-  private final boolean complete;
-  private final String reasonToCompact;
+  private final State state;
+  private final String reason;
 
-  private CompactionStatus(boolean complete, String reason)
+  private CompactionStatus(State state, String reason)
   {
-    this.complete = complete;
-    this.reasonToCompact = reason;
+    this.state = state;
+    this.reason = reason;
   }
 
   public boolean isComplete()
   {
-    return complete;
+    return state == State.COMPLETE;
   }
 
-  public String getReasonToCompact()
+  public boolean isSkipped()
   {
-    return reasonToCompact;
+    return state == State.SKIPPED;
+  }
+
+  public String getReason()
+  {
+    return reason;
+  }
+
+  public State getState()
+  {
+    return state;
+  }
+
+  @Override
+  public String toString()
+  {
+    return "CompactionStatus{" +
+           "state=" + state +
+           ", reason=" + reason +
+           '}';
   }
 
   private static CompactionStatus incomplete(String reasonFormat, Object... args)
   {
-    return new CompactionStatus(false, StringUtils.format(reasonFormat, args));
+    return new CompactionStatus(State.PENDING, StringUtils.format(reasonFormat, args));
   }
 
-  private static CompactionStatus completeIfEqual(String field, Object configured, Object current)
+  private static <T> CompactionStatus completeIfEqual(
+      String field,
+      T configured,
+      T current,
+      Function<T, String> stringFunction
+  )
   {
     if (configured == null || configured.equals(current)) {
       return COMPLETE;
     } else {
-      return configChanged(field, configured, current);
+      return configChanged(field, configured, current, stringFunction);
     }
   }
 
-  private static CompactionStatus configChanged(String field, Object configured, Object current)
+  private static <T> CompactionStatus configChanged(
+      String field,
+      T target,
+      T current,
+      Function<T, String> stringFunction
+  )
   {
     return CompactionStatus.incomplete(
-        "Configured %s[%s] is different from current %s[%s]",
-        field, configured, field, current
+        "'%s' mismatch: required[%s], current[%s]",
+        field,
+        target == null ? null : stringFunction.apply(target),
+        current == null ? null : stringFunction.apply(current)
     );
+  }
+
+  private static String asString(Granularity granularity)
+  {
+    if (granularity == null) {
+      return null;
+    }
+    for (GranularityType type : GranularityType.values()) {
+      if (type.getDefaultGranularity().equals(granularity)) {
+        return type.toString();
+      }
+    }
+    return granularity.toString();
+  }
+
+  private static String asString(PartitionsSpec partitionsSpec)
+  {
+    if (partitionsSpec instanceof DimensionRangePartitionsSpec) {
+      DimensionRangePartitionsSpec rangeSpec = (DimensionRangePartitionsSpec) partitionsSpec;
+      return StringUtils.format(
+          "'range' on %s with %,d rows",
+          rangeSpec.getPartitionDimensions(), rangeSpec.getTargetRowsPerSegment()
+      );
+    } else if (partitionsSpec instanceof HashedPartitionsSpec) {
+      HashedPartitionsSpec hashedSpec = (HashedPartitionsSpec) partitionsSpec;
+      return StringUtils.format(
+          "'hashed' on %s with %,d rows",
+          hashedSpec.getPartitionDimensions(), hashedSpec.getTargetRowsPerSegment()
+      );
+    } else if (partitionsSpec instanceof DynamicPartitionsSpec) {
+      DynamicPartitionsSpec dynamicSpec = (DynamicPartitionsSpec) partitionsSpec;
+      return StringUtils.format(
+          "'dynamic' with %,d rows",
+          dynamicSpec.getMaxRowsPerSegment()
+      );
+    } else {
+      return partitionsSpec.toString();
+    }
+  }
+
+  static CompactionStatus skipped(String reasonFormat, Object... args)
+  {
+    return new CompactionStatus(State.SKIPPED, StringUtils.format(reasonFormat, args));
+  }
+
+  static CompactionStatus running(String reasonForCompaction)
+  {
+    return new CompactionStatus(State.RUNNING, reasonForCompaction);
   }
 
   /**
@@ -114,8 +200,8 @@ public class CompactionStatus
    * the {@link #CHECKS} one by one. If any check returns an incomplete status,
    * further checks are not performed and the incomplete status is returned.
    */
-  static CompactionStatus of(
-      SegmentsToCompact candidateSegments,
+  static CompactionStatus compute(
+      CompactionCandidate candidateSegments,
       DataSourceCompactionConfig config,
       ObjectMapper objectMapper
   )
@@ -149,23 +235,21 @@ public class CompactionStatus
   {
     private final ObjectMapper objectMapper;
     private final DataSourceCompactionConfig compactionConfig;
-    private final SegmentsToCompact candidateSegments;
+    private final CompactionCandidate candidateSegments;
     private final CompactionState lastCompactionState;
     private final ClientCompactionTaskQueryTuningConfig tuningConfig;
     private final ClientCompactionTaskGranularitySpec existingGranularitySpec;
     private final UserCompactionTaskGranularityConfig configuredGranularitySpec;
 
     private Evaluator(
-        SegmentsToCompact candidateSegments,
+        CompactionCandidate candidateSegments,
         DataSourceCompactionConfig compactionConfig,
         ObjectMapper objectMapper
     )
     {
-      Preconditions.checkArgument(!candidateSegments.isEmpty(), "Empty candidates");
-
       this.candidateSegments = candidateSegments;
       this.objectMapper = objectMapper;
-      this.lastCompactionState = candidateSegments.getFirst().getLastCompactionState();
+      this.lastCompactionState = candidateSegments.getSegments().get(0).getLastCompactionState();
       this.compactionConfig = compactionConfig;
       this.tuningConfig = ClientCompactionTaskQueryTuningConfig.from(compactionConfig);
       this.configuredGranularitySpec = compactionConfig.getGranularitySpec();
@@ -182,7 +266,7 @@ public class CompactionStatus
     private CompactionStatus segmentsHaveBeenCompactedAtLeastOnce()
     {
       if (lastCompactionState == null) {
-        return CompactionStatus.incomplete("Not compacted yet");
+        return CompactionStatus.incomplete("not compacted yet");
       } else {
         return COMPLETE;
       }
@@ -196,7 +280,7 @@ public class CompactionStatus
       if (allHaveSameCompactionState) {
         return COMPLETE;
       } else {
-        return CompactionStatus.incomplete("Candidate segments have different last compaction states.");
+        return CompactionStatus.incomplete("segments have different last compaction states");
       }
     }
 
@@ -205,7 +289,8 @@ public class CompactionStatus
       return CompactionStatus.completeIfEqual(
           "partitionsSpec",
           findPartitionsSpecFromConfig(tuningConfig),
-          lastCompactionState.getPartitionsSpec()
+          lastCompactionState.getPartitionsSpec(),
+          CompactionStatus::asString
       );
     }
 
@@ -214,7 +299,8 @@ public class CompactionStatus
       return CompactionStatus.completeIfEqual(
           "indexSpec",
           Configs.valueOrDefault(tuningConfig.getIndexSpec(), IndexSpec.DEFAULT),
-          objectMapper.convertValue(lastCompactionState.getIndexSpec(), IndexSpec.class)
+          objectMapper.convertValue(lastCompactionState.getIndexSpec(), IndexSpec.class),
+          String::valueOf
       );
     }
 
@@ -239,15 +325,16 @@ public class CompactionStatus
         );
         if (needsCompaction) {
           return CompactionStatus.incomplete(
-              "Configured segmentGranularity[%s] does not align with segment intervals.",
-              configuredSegmentGranularity
+              "segmentGranularity: segments do not align with target[%s]",
+              asString(configuredSegmentGranularity)
           );
         }
       } else {
         return CompactionStatus.configChanged(
             "segmentGranularity",
             configuredSegmentGranularity,
-            existingSegmentGranularity
+            existingSegmentGranularity,
+            CompactionStatus::asString
         );
       }
 
@@ -262,7 +349,8 @@ public class CompactionStatus
         return CompactionStatus.completeIfEqual(
             "rollup",
             configuredGranularitySpec.isRollup(),
-            existingGranularitySpec == null ? null : existingGranularitySpec.isRollup()
+            existingGranularitySpec == null ? null : existingGranularitySpec.isRollup(),
+            String::valueOf
         );
       }
     }
@@ -275,7 +363,8 @@ public class CompactionStatus
         return CompactionStatus.completeIfEqual(
             "queryGranularity",
             configuredGranularitySpec.getQueryGranularity(),
-            existingGranularitySpec == null ? null : existingGranularitySpec.getQueryGranularity()
+            existingGranularitySpec == null ? null : existingGranularitySpec.getQueryGranularity(),
+            CompactionStatus::asString
         );
       }
     }
@@ -289,7 +378,8 @@ public class CompactionStatus
         return CompactionStatus.completeIfEqual(
             "dimensionsSpec",
             compactionConfig.getDimensionsSpec().getDimensions(),
-            existingDimensionsSpec == null ? null : existingDimensionsSpec.getDimensions()
+            existingDimensionsSpec == null ? null : existingDimensionsSpec.getDimensions(),
+            String::valueOf
         );
       }
     }
@@ -309,8 +399,9 @@ public class CompactionStatus
       if (existingMetricsSpec == null || !Arrays.deepEquals(configuredMetricsSpec, existingMetricsSpec)) {
         return CompactionStatus.configChanged(
             "metricsSpec",
-            Arrays.toString(configuredMetricsSpec),
-            Arrays.toString(existingMetricsSpec)
+            configuredMetricsSpec,
+            existingMetricsSpec,
+            Arrays::toString
         );
       } else {
         return COMPLETE;
@@ -330,7 +421,8 @@ public class CompactionStatus
       return CompactionStatus.completeIfEqual(
           "transformSpec filter",
           compactionConfig.getTransformSpec().getFilter(),
-          existingTransformSpec == null ? null : existingTransformSpec.getFilter()
+          existingTransformSpec == null ? null : existingTransformSpec.getFilter(),
+          String::valueOf
       );
     }
 
